--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav> 
      <ul> 
       <li> <a target="_blank" href="./file/files.html">文件下载</a></li> 
-      <li> <a target="_blank" href="./file/Love/index.html">爱心源码</a></li> 
+      <li> <a target="_blank" href="./Love/index.html">爱心源码</a></li> 
       <li> <a target="_blank" href="./Update/Update.html">更新日志</a></li>
       <li> <a target="_blank" href="./contact/index.html">2012 to 2017</a></li>
       <li> <a target="_blank" href="./Prediction/Prediction.html">敬请期待</a></li>
