--- a/Videos/Videos.html
+++ b/Videos/Videos.html
@@ -7,8 +7,9 @@
 <body>
         <h1>动漫区</h1>
         <hr>
-        <h3>《妖怪名单第一季》总集篇</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-anoDv.html"><h3>获取资源</h3></a></p>
+        <h3>《妖怪名单第一季》</h3>
+        <p><a href="https://www.123pan.com/s/guyiVv-O2oDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="./001.html"><h3>获取PotPlayer视频源</h3></a></p>
         <h4>状态：完结
             <br>
             年份：2014
@@ -21,7 +22,8 @@
         </h4>
         <hr>
         <h3>《妖怪名单第二季》</h3>
-        <p><a href=""><h3>筹备中</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-GsoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="./002.html"><h3>获取PotPlayer视频源</h3></a></p>
         <h4>
             状态：完结
             <br>
