--- a/file/files.html
+++ b/file/files.html
@@ -11,6 +11,9 @@
         <p><a href="./files/hosts.zip">【Github源】点击下载</a></p>
         <p><a href="https://www.123pan.com/s/guyiVv-mnoDv.html">【123网盘源】点击下载</a></p>
         <hr>
+        <h3>PotPlayer播放器&配置文件</h3>
+        <p><a href="https://www.123pan.com/s/guyiVv-N2oDv.html">点我获取</a></p>
+        <hr>
         <h3>HMCL启动器&Jre</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-1noDv.html">点我获取</a></p>
         <hr>
