--- a/Videos/Videos.html
+++ b/Videos/Videos.html
@@ -51,7 +51,8 @@
         </h4>
         <hr>
         <h3>《缘之空》</h3>
-        <p><a href=""><h3>筹备中</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-BCoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="./012.html"><h3>获取PotPlayer视频源</h3></a></p>
         <h4>
             状态：完结
             <br>
