--- a/Videos/Videos.html
+++ b/Videos/Videos.html
@@ -9,7 +9,7 @@
         <hr>
         <h3>《妖怪名单第一季》</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-O2oDv.html"><h3>获取资源</h3></a></p>
-        <p><a href="./001.html"><h3>获取PotPlayer视频源</h3></a></p>
+        <p><a href="./001.html"><h3>获取视频源</h3></a></p>
         <h4>状态：完结
             <br>
             年份：2014
@@ -23,7 +23,7 @@
         <hr>
         <h3>《妖怪名单第二季》</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-GsoDv.html"><h3>获取资源</h3></a></p>
-        <p><a href="./002.html"><h3>获取PotPlayer视频源</h3></a></p>
+        <p><a href="./002.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
             <br>
@@ -52,7 +52,7 @@
         <hr>
         <h3>《缘之空》</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-BCoDv.html"><h3>获取资源</h3></a></p>
-        <p><a href="./012.html"><h3>获取PotPlayer视频源</h3></a></p>
+        <p><a href="./012.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
             <br>
@@ -97,7 +97,7 @@
         <hr>
         <h3>《镇魂街第三季》</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-PsoDv.html"><h3>获取资源</h3></a></p>
-        <p><a href="./011.html"><h3>获取PotPlayer视频源</h3></a></p>
+        <p><a href="./011.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：更新至12集(本网站更新至2集)
             <br>
@@ -108,7 +108,23 @@
             更新：2023-10-08 08:39
             <br>
             剧情简介：该季讲述了，拥有“武神躯”的少年镇魂将——曹焱兵为寻父母下落，与少女夏铃、北落师门等队友，闯入灵域禁地芦花古楼，并与守卫者“风花雪月”四王展开激烈交锋的冒险故事。
-            <hr>
+        </h4>
+        <hr>
+        <h3>《回复术士的重启人生》</h3>
+        <p><a href="https://www.123pan.com/s/guyiVv-RCoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="./011.html"><h3>获取视频源</h3></a></p>
+        <h4>
+            状态：完结
+            <br>
+            年份：2021
+            <br>
+            类型：奇幻/冒险/日本动漫
+            <br>
+            更新：2023-09-19 17:50
+            <br>
+            剧情简介：《回复术士的重来人生》是由羽贺ソウケソ 月夜泪 创作的漫画。回复术士只有治愈的才能。被认为一个人什么都做不到的存在。不依存别人就无法战斗，正因为是这样的存在所以被利用。一直被利用于是来到了这一步。在注意到过去的时候已经迟了，我的人生已经完了。所以重新来过。隐藏气息，不能让任何人知道我恢复了意识。装作十分愚钝，这也是为了最后最后的胜利。
+            <br>
+        <hr>
         <h3>敬请期待</h3>
 </body>
 </html>
