--- a/Videos/Videos.html
+++ b/Videos/Videos.html
@@ -99,7 +99,7 @@
         <p><a href="https://www.123pan.com/s/guyiVv-PsoDv.html"><h3>获取资源</h3></a></p>
         <p><a href="./011.html"><h3>获取视频源</h3></a></p>
         <h4>
-            状态：更新至12集(本网站更新至2集)
+            状态：更新中
             <br>
             年份：2023
             <br>
