--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="content"> 
      <div class="inner"> 
       <h1>Lilysen个人支持中心</h1> 
-      <p>多年的你是否还会记得，曾经的那份理想</p>
+      <p>星星之火，可以燎原</p>
      </div> 
     </div> 
     <nav> 
@@ -41,7 +41,7 @@
 	<p class="copyright">那些暗潮汹涌的 见不得人的 无法诉之于口的才是我真正的生活</p>
     <p class="copyright"><a href="https://github.com/nianbroken/">源码提供：碎念</a></p> 
     <p class="copyright"><a href="https://github.com/nianbroken/">特别鸣谢：碎念</a></p> 
-    <p class="copyright">别忘了,你当初只是想满足一个小小的要求</p>
+    <p class="copyright">多年的你是否还会记得，曾经的那份理想</p>
     <!--<p class="copyright"><a href="">友情链接</a></p>-->
    </footer> 
   </div> 
