--- a/file/files.html
+++ b/file/files.html
@@ -12,7 +12,8 @@
         <p><a href="https://www.123pan.com/s/guyiVv-mnoDv.html">【123网盘源】点击下载</a></p>
         <hr>
         <h3>PotPlayer播放器&配置文件</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-N2oDv.html">点我获取</a></p>
+        <p><a href="https://vip.123pan.cn/1815573862/PotPlayer%E6%92%AD%E6%94%BE%E5%99%A8/PotPlayerSetup64.exe">获取播放器</a></p>
+        <p><a href="https://vip.123pan.cn/1815573862/PotPlayer%E6%92%AD%E6%94%BE%E5%99%A8/PotPlayer%E6%8E%A8%E8%8D%90%E9%85%8D%E7%BD%AE%E8%AE%BE%E7%BD%AE.reg">获取配置文件</a></p>
         <hr>
         <h3>HMCL启动器&Jre</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-1noDv.html">点我获取</a></p>
