--- a/Videos/Videos.html
+++ b/Videos/Videos.html
@@ -37,7 +37,8 @@
         </h4>
         <hr>
         <h3>《狐妖小红娘》</h3>
-        <p><a href=""><h3>筹备中</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-L0oDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="./003.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
             <br>
