--- a/file/files.html
+++ b/file/files.html
@@ -24,8 +24,8 @@
         <h3>局域网聊天工具：梦想飞聊</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-4noDv.html">点我获取</a></p>
         <hr>
-        <h3>植物大战僵尸E版支线V1.9.7</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-knoDv.html">点我获取</a></p>
+        <h3>植物大战僵尸E版支线</h3>
+        <p><a href="">筹备中</a></p>
         <hr>
         <h3>侠盗猎车手5【免费版】</h3>
         <h3>提取码:GTAV</h3>
