--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 					<h2 class="chtitle">Lilysen的<span>小伙伴</span>们</h2>
 
 					<!-- 友链 -->
-					<div class="clear"> <a href="<!--链接-->" target="_blank">
+					<div class="clear"> <a href="" target="_blank">
 							<div class="item">
 								<div class="avatar"> <img
 										src="images/icon.png">
