--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
 							</div>
 					</div>
 					<div class="clear">
-						<a href="" target="_blank">
+						<a href="https://youtube.com/@LilysenSSR" target="_blank">
 							<div class="item">
 								<div class="bg" style="background-color:#28a9e0"></div>
-								<div class="inner"> <i class="icon-twitter"></i> <span>建设中</span> </div>
+								<div class="inner"><span>YouTube</span> </div>
 							</div>
 						</a>
 						<a href="" target="_blank">
@@ -189,9 +189,9 @@
 						<a href="" target="_blank">
 							<div class="item">
 								<div class="bg" style="background-color:#28a9e0"></div>
-								<div class="inner"> <span>建设中</span> </div>
+								<div class="inner"> <i class="icon-twitter"></i><span>建设中</span> </div>
 							</div>
-								</div>
+							</div>
 							</div>
 						</a>
 					</div>
@@ -202,7 +202,7 @@
 					<h2 class="chtitle">Lilysen的<span>小伙伴</span>们</h2>
 
 					<!-- 友链 -->
-					<div class="clear"> <a href="" target="_blank">
+					<div class="clear"> <a href="<!--链接-->" target="_blank">
 							<div class="item">
 								<div class="avatar"> <img
 										src="images/icon.png">
