--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<p>学习成绩</p>
 								<div class="progress">
 									<div style="width:5%;">
-									</div><span>啊？我不知道啊老师教了我不会啊:(</span>
+									</div><span>啊？我不知道啊老师教了但我不会啊:(</span>
 								</div>
 							</li>
 							<li>
