--- a/file/files.html
+++ b/file/files.html
@@ -7,9 +7,17 @@
     <body>
         <h1>文件下载站</h1>
         <hr>
-        <h3>Offline webpage set up for the computer room</h3>
-        <p><a href="./files/hosts.zip">【Github源】点击下载</a></p>
-        <p><a href="https://www.123pan.com/s/guyiVv-mnoDv.html">【123网盘源】点击下载</a></p>
+        <h3>7zip-x64解压工具(遇到解压失败不妨试试这个)</h3>
+        <p><a href="https://vip.123pan.cn/1815573862/7zip/7z2301-x64.exe>">点击下载</a></p>
+        <hr>
+        <h3>CS1.6</h3>
+        <p><a href="https://vip.123pan.cn/1815573862/CS1.6/cs-1.6.exe">点击下载</a></p>
+        <hr>
+        <h3>植物大战僵尸95版</h3>
+        <p style="font-size: 20px;">【ZIP文件 (解压乱码可尝试下载RAR文件)】</p>
+        <p><a href="https://vip.123pan.cn/1815573862/PVZ-95%E7%89%88/95%E7%89%88.zip">点击下载</a></p>
+        <p style="font-size: 20px;">【RAR文件 (解压可能需要7zip等软件)】</p>
+        <p><a href="https://vip.123pan.cn/1815573862/PVZ-95%E7%89%88/95%E7%89%88.rar">点击下载</a></p>
         <hr>
         <h3>PotPlayer播放器&配置文件</h3>
         <p><a href="https://vip.123pan.cn/1815573862/PotPlayer%E6%92%AD%E6%94%BE%E5%99%A8/PotPlayerSetup64.exe">获取播放器</a></p>
@@ -24,12 +32,10 @@
         <h3>局域网聊天工具：梦想飞聊</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-4noDv.html">点我获取</a></p>
         <hr>
-        <h3>植物大战僵尸E版支线</h3>
-        <p><a href="">筹备中</a></p>
-        <hr>
         <h3>侠盗猎车手5【免费版】</h3>
         <h3>提取码:GTAV</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-onoDv.html">点我获取</a></p>
+        <hr>
         <h1>GBA专区</h1>
         <hr>
         <h3>【GBA模拟器】VisualBoyAdvance模拟器</h3>
