--- a/Prediction/Prediction.html
+++ b/Prediction/Prediction.html
@@ -5,6 +5,6 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Uptate UI</h1>
+        <h1>传奇私服试图搭建中...</h1>
     </body>
 </html>
