--- a/file/files.html
+++ b/file/files.html
@@ -8,7 +8,7 @@
         <h1>文件下载站</h1>
         <hr>
         <h3>7zip-x64解压工具(遇到解压失败不妨试试这个)</h3>
-        <p><a href="https://vip.123pan.cn/1815573862/7zip/7z2301-x64.exe>">点击下载</a></p>
+        <p><a href="https://vip.123pan.cn/1815573862/7zip/7z2301-x64.exe">点击下载</a></p>
         <hr>
         <h3>CS1.6</h3>
         <p><a href="https://vip.123pan.cn/1815573862/CS1.6/cs-1.6.exe">点击下载</a></p>
