--- a/file/files.html
+++ b/file/files.html
@@ -11,7 +11,7 @@
         <p><a href="https://vip.123pan.cn/1815573862/7zip/7z2301-x64.exe">点击下载</a></p>
         <hr>
         <h3>CS1.6</h3>
-        <p><a href="https://vip.123pan.cn/1815573862/CS1.6/cs-1.6.exe">点击下载</a></p>
+        <p><a href="https://vip.123pan.cn/1815573862/CS1.6/CS1.6.zip">点击下载</a></p>
         <hr>
         <h3>植物大战僵尸95版</h3>
         <p style="font-size: 20px;">【ZIP文件 (解压乱码可尝试下载RAR文件)】</p>
