--- a/file/files.html
+++ b/file/files.html
@@ -23,14 +23,14 @@
         <p><a href="https://vip.123pan.cn/1815573862/PotPlayer%E6%92%AD%E6%94%BE%E5%99%A8/PotPlayerSetup64.exe">获取播放器</a></p>
         <p><a href="https://vip.123pan.cn/1815573862/PotPlayer%E6%92%AD%E6%94%BE%E5%99%A8/PotPlayer%E6%8E%A8%E8%8D%90%E9%85%8D%E7%BD%AE%E8%AE%BE%E7%BD%AE.reg">获取配置文件</a></p>
         <hr>
-        <h3>HMCL启动器&Jre</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-1noDv.html">点我获取</a></p>
+        <h3>局域网聊天工具：梦想飞聊</h3>
+        <p><a href="https://vip.123pan.cn/1815573862/%E6%A2%A6%E6%83%B3%E9%A3%9E%E8%81%8A/DreamChat.zip">点击下载</a></p>
+        <hr>
+        <h3>HMCL启动器&Java</h3>
+        <p><a href="https://vip.123pan.cn/1815573862/HMCL&Java/HMCL&Java.zip">点击下载</a></p>
         <hr>
         <h3>PokeMMO语言包&ROM</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-BnoDv.html">点我获取</a></p>
-        <hr>
-        <h3>局域网聊天工具：梦想飞聊</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-4noDv.html">点我获取</a></p>
         <hr>
         <h3>侠盗猎车手5【免费版】</h3>
         <h3>提取码:GTAV</h3>
