--- a/Update/Update.html
+++ b/Update/Update.html
@@ -7,7 +7,7 @@
     <body>
     <hr>
     <h1>1.4版本</h1>
-    <p>"我们更新了主页的UI页面，减少了性能损耗</p>
+    <p>"我们更新了主页的UI页面，减少了性能损耗与较长的等待时间</p>
     <h2>参与更新的人员:</h2>
     <P>Lilysen</P>
     <h3>最后更新于2023/10/30 上午10:00</h3>
