--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 								<div class="inner"> <i class="icon-github"></i> <span>Github</span> </div>
 							</div>
 						</a>
-						<a href="http://highschool.lilysen.com/" target="_blank">
+						<a href="http://reguluere.top/" target="_blank">
 							<div class="item">
 								<div class="bg" style="background-color:#28a9e0"></div>
-								<div class="inner"> <span>留言墙</span> </div>
+								<div class="inner"> <span>我的传奇私服</span> </div>
 							</div>
 						</a>
 						<a href="https://space.bilibili.com/1505708192?spm_id_from=333.1007.0.0"
