--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								<div class="inner"> <i class="icon-github"></i> <span>Github</span> </div>
 							</div>
 						</a>
-						<a href="http://reguluere.top/" target="_blank">
+						<a href="http://reguluere.top:81/" target="_blank">
 							<div class="item">
 								<div class="bg" style="background-color:#28a9e0"></div>
 								<div class="inner"> <span>我的传奇私服</span> </div>
