--- a/Videos/Videos.html
+++ b/Videos/Videos.html
@@ -69,7 +69,8 @@
         </h4>
         <hr>
         <h3>《镇魂街第一季》</h3>
-        <p><a href=""><h3>筹备中</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-vZoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="./009.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
             <br>
@@ -83,7 +84,8 @@
         </h4>
         <hr>
         <h3>《镇魂街第二季》</h3>
-        <p><a href=""><h3>筹备中</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-dZoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="./010.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
             <br>
@@ -100,7 +102,7 @@
         <p><a href="https://www.123pan.com/s/guyiVv-PsoDv.html"><h3>获取资源</h3></a></p>
         <p><a href="./011.html"><h3>获取视频源</h3></a></p>
         <h4>
-            状态：更新中
+            状态：完结
             <br>
             年份：2023
             <br>
