--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<a href="" target="_blank" class="active">首页</a> <a class="clip"></a>
 		<a href="file/files.html" target="_blank">文件下载</a>
 		<a class="clip"></a> <a href="Love/index.html" target="_blank">爱心特效</a>
-		<a class="clip"></a> <a href="contact/index.html" target="_blank">2012 to 2017</a>
+		<a class="clip"></a> <a href="Video/index.html" target="_blank">影视&动漫</a>
 		<a href="Update/Update.html" target="_blank">更新日志</a>
 		<a href="Prediction/Prediction.html" target="_blank">敬请期待</a>
 	</nav>
@@ -143,7 +143,7 @@
 								<div class="inner"> <i class="icon-github"></i> <span>Github</span> </div>
 							</div>
 						</a>
-						<a href="http://reguluere.top:81/" target="_blank">
+						<a href="http://reguluere.top/" target="_blank">
 							<div class="item">
 								<div class="bg" style="background-color:#28a9e0"></div>
 								<div class="inner"> <span>我的传奇私服</span> </div>
