--- a/Update/Update.html
+++ b/Update/Update.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     </head>
     <body>
+    <h1>1.5版本</h1>
+    <p>将"Lilysen from 2012 to 2017"专栏更改为"影视&动漫"</p>
     <hr>
     <h1>1.4版本</h1>
     <p>"我们更新了主页的UI页面，减少了性能损耗与较长的等待时间</p>
