--- a/Videos/anime.html
+++ b/Videos/anime.html
@@ -8,7 +8,7 @@
         <h1>动漫区</h1>
         <hr>
         <h3>《妖怪名单第一季》</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-O2oDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-O2oDv.html"><h3>【标清480P】在线观看</h3></a></p>
         <p><a href="./001.html"><h3>获取视频源</h3></a></p>
         <h4>状态：完结
             <br>
@@ -22,7 +22,7 @@
         </h4>
         <hr>
         <h3>《妖怪名单第二季》</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-GsoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-GsoDv.html"><h3>【标清480P】在线观看</h3></a></p>
         <p><a href="./002.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
@@ -37,7 +37,7 @@
         </h4>
         <hr>
         <h3>《狐妖小红娘》</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-L0oDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-L0oDv.html"><h3>【标清480P】在线观看</h3></a></p>
         <p><a href="./003.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
@@ -52,7 +52,7 @@
         </h4>
         <hr>
         <h3>《缘之空》</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-BCoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-BCoDv.html"><h3>【标清480P】在线观看</h3></a></p>
         <p><a href="./012.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
@@ -69,7 +69,7 @@
         </h4>
         <hr>
         <h3>《镇魂街第一季》</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-vZoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-vZoDv.html"><h3>【标清480P】在线观看</h3></a></p>
         <p><a href="./009.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
@@ -84,7 +84,7 @@
         </h4>
         <hr>
         <h3>《镇魂街第二季》</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-dZoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-dZoDv.html"><h3>【标清480P】在线观看</h3></a></p>
         <p><a href="./010.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
@@ -99,7 +99,7 @@
         </h4>
         <hr>
         <h3>《镇魂街第三季》</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-PsoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-PsoDv.html"><h3>【标清480P】在线观看</h3></a></p>
         <p><a href="./011.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
@@ -114,7 +114,7 @@
         </h4>
         <hr>
         <h3>《未闻花名 / 我们仍未知道那天所看见的花的名字 / 彼花未知名 / 未知彼时花开名 / 那朵花 / 那日所见花儿之名我们仍未知晓 / あのはな》
-        <p><a href="https://www.123pan.com/s/guyiVv-ZKoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-ZKoDv.html"><h3>【标清480P】在线观看</h3></a></p>
         <p><a href="./014.html"><h3>获取视频源</h3></a></p>
         <h4>
             状态：完结
@@ -126,21 +126,6 @@
             更新：2020-12-09 10:41
             <br>
             剧情简介:《我们仍未知道那天所看见的花的名字》是由日本动画公司A-1 Pictures制作的原创电视动画，于2011年4月14日起在日本富士电视台的“noitaminA”节目播出，全11集。官方的简称为“那朵花（あの花）”，在中国通常又被称为“未闻花名”。同名剧场版于2013年8月31日公开播映。《那朵花》是一部用直达内心的笔触描写青春期的少男少女在面对恋情、友情、纠葛时，有欢欣笑容也有伤心泪水的青春原创动画片。从小时候起一直青梅竹马的6人，却在升上高中之后彼此有了距离。不太与人们接触的主角宿海仁太、有点被小太妹熏染的安城鸣子、进入重点高中的松雪集与鹤见知利子、放弃读高中而展开旅行的久川铁道、只有幼年死去的本间芽衣子（灵魂，只有仁太能看见）还是一如从前。有一天，芽衣子对仁太说：“帮我实现一个愿望吧”。仁太虽然有点为难，却还是答应帮助面码实现愿望。以此为契机，为了实现芽衣子的愿望，分散在各处的大家又再次地聚集在一起.
-        <hr>
-        <h3>《回复术士的重启人生》</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-RCoDv.html"><h3>获取资源</h3></a></p>
-        <p><a href="./013.html"><h3>获取视频源</h3></a></p>
-        <h4>
-            状态：完结
-            <br>
-            年份：2021
-            <br>
-            类型：奇幻/冒险/日本动漫
-            <br>
-            更新：2023-09-19 17:50
-            <br>
-            剧情简介：《回复术士的重来人生》是由羽贺ソウケソ 月夜泪 创作的漫画。回复术士只有治愈的才能。被认为一个人什么都做不到的存在。不依存别人就无法战斗，正因为是这样的存在所以被利用。一直被利用于是来到了这一步。在注意到过去的时候已经迟了，我的人生已经完了。所以重新来过。隐藏气息，不能让任何人知道我恢复了意识。装作十分愚钝，这也是为了最后最后的胜利。
-            <br>
         <hr>
         <h3>敬请期待</h3>
 </body>
