--- a/Videos/movies.html
+++ b/Videos/movies.html
@@ -8,7 +8,7 @@
         <h1>电影区</h1>
         <hr>
         <h3>【在大陆被封禁的】《隐入尘烟》</h3>
-        <p><a href="https://www.123pan.com/s/guyiVv-ncoDv.html"><h3>获取资源</h3></a></p>
+        <p><a href="https://www.123pan.com/s/guyiVv-ncoDv.html"><h3>【标清480】在线观看</h3></a></p>
         <p><a href="https://vip.123pan.cn/1815573862/%E3%80%8A%E9%9A%90%E5%85%A5%E5%B0%98%E7%83%9F%E3%80%8B/%E3%80%8A%E9%9A%90%E5%85%A5%E5%B0%98%E7%83%9F%E3%80%8B.mp4"><h3>获取视频源</h3></a></p>
         <h4>
             年份：2022-07-08(中国大陆) / 2022-02-13(柏林电影节)
