--- a/index.html
+++ b/index.html
@@ -202,7 +202,19 @@
 					<h2 class="chtitle">Lilysen的<span>小伙伴</span>们</h2>
 
 					<!-- 友链 -->
-					<div class="clear"> <a href="<!--链接-->" target="_blank">
+					<div class="clear"> <a href="https://www.rainyun.com/MTMyNjE0_" target="_blank">
+							<div class="item">
+								<div class="avatar"> <img
+										src="images/rain cloud logo.png">
+								</div>
+								<div class="inner">
+									<h5>雨云</h5>
+									<p>新一代云服务提供商</p>
+								</div>
+							</div>
+						</a>
+
+						<a href="<!--链接-->" target="_blank">
 							<div class="item">
 								<div class="avatar"> <img
 										src="images/icon.png">
@@ -214,19 +226,7 @@
 							</div>
 						</a>
 
-						<a href="" target="_blank">
-							<div class="item">
-								<div class="avatar"> <img
-										src="images/icon.png">
-								</div>
-								<div class="inner">
-									<h5>让Lilysen将你展示在这里吧</h5>
-									<p>让Lilysen将你展示在这里吧</p>
-								</div>
-							</div>
-						</a>
-
-						<a href="" target="_blank">
+						<a href="<!--链接-->" target="_blank">
 							<div class="item">
 								<div class="avatar"> <img src="images/icon.png"> </div>
 								<div class="inner">
