--- a/Video/index.html
+++ b/Video/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
         <h1>影视&动漫</h1>
-        <p><a href="../Videos/movies.html"><h3>电影区</h3></a></p>
+        <p><a href="../Videos/movies.html"><h3>影视区</h3></a></p>
         <hr>
         <p><a href="../Videos/anime.html"><h3>动漫区</h3></a></p>
 </body>
